# Knowledge-aware-complementary-product-representation-learning

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
exp/: analysis.ipynb  preprocess.ipynb  prod_info_index.pkl  token_info_index.pkl  user_info_index.pkl  utils.py
infer_cold/: fast_infer_cold.py  run_fast_infer.py
script/: run.sh  train_instacart.sh
src/: args.cpp  args.h  dataLoader.cpp  dataLoader.h  matrix.cpp  matrix.h  model.cpp  model.h  productquantizer.cpp  productquantizer.h  qmatrix.cpp  qmatrix.h  real.h  uniVec.cpp  uniVec.h  utils.cpp  utils.h  vector.cpp  vector.h
test/resource/: fake_item_word.txt  fake_user_hist.txt  fake_user_word.txt  produce_fake_data.py
